tests/error/linear_errors/field_copy_nested3.err
Error: Copy violation (at $FILE:29:11)
   | 
27 | def foo(s: MyStruct1 @owned) -> qubit:
28 |     use(s.x)
29 |     return s.x.q
   |            ^^^^^ Field `s.x.q` with non-copyable type `qubit` cannot be
   |                  returned ...
   | 
28 |     use(s.x)
   |         --- since it was already consumed here

Guppy compilation failed due to 1 previous error
